[tool.poetry]
name = "cdk-integ-runner-cwd-fix"
version = "0.1.0"
description = "Fix the problem with CDK's integ-runner breaking the python path and current working directory."
authors = ["Tom Harvey <tom@alush.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
